--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/uuid": "^10.0.0",
     "antd": "^5.12.5",
+    "firebase": "^11.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
